--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,36 @@
-<div class="container">
-  <div class="row">
-    <h1 class="badge bg-success">Bem-vindo ao projeto
-      <span class="badge bg-success">Angular com Bootstrap</span>
-    </h1>
-
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#">Produtos</a>
+      <button class="navbar-toggler" type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Produtos
+          </a>
+          <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="/produtos/detalhe">Cadastro</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="/produtos/lista">Listagem</a></li>
+          </ul>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#">Sobre</a>
+          </li>
+      </ul>
+      </div>
   </div>
-</div>
+</nav>
 
 <router-outlet></router-outlet>
