--- a/src/app/produtos/produto-detalhe/produto-detalhe.component.html
+++ b/src/app/produtos/produto-detalhe/produto-detalhe.component.html
@@ -1,6 +1,5 @@
-<br>
 <div class="container">
-    <h1>Cadastro de Produto</h1>
+    <h1 class="mt-4">Cadastro de Produto</h1>
     <form>
         <div class="row">
             <div class="form-group col-md-6">
@@ -19,7 +18,6 @@
                 </select>
             </div>
         </div>
-        <br>
         <div class="row">
             <div class="form-group col-md-6">
                 <label for="nome">Peso (Kg)</label>
@@ -38,11 +36,16 @@
                 </div>
             </div>
         </div>
-
-        <br>
         <div class="row">
+          <div class="form-group col-md-6">
+            <label for="dataCadastro">Data de Cadastro</label>
+            <input class="form-control" type="date" name="dataCadastro"
+            [(ngModel)]="produto.dataCadastro">
+          </div>
+        </div>
+        <div class="row mt-4">
             <div class="form-group col-md-6">
-                <button type="submit" class="btn btn-danger " (click)="salvar()">Salvar</button>
+                <button type="submit" class="btn btn-danger" (click)="salvar()">Salvar</button>
             </div>
             <div class="form-group col-md-6">
                 <button type="submit" class="btn btn-dark" (click)="voltar()">Voltar</button>
