--- a/src/app/produtos/produto-listagem/produto-listagem.component.html
+++ b/src/app/produtos/produto-listagem/produto-listagem.component.html
@@ -1,4 +1,5 @@
 <br>
+
 <div class="container-fluid">
   <div class="row">
     <div class="col-sm-12">
@@ -24,6 +25,7 @@
               </div>
 
               <br>
+
               <div class="row">
                 <div class="form-group col-md-6">
                   <button type="submit" class="form-control btn btn-secondary"
@@ -54,18 +56,27 @@
                     <tr>
                       <th scope="col">Id</th>
                       <th scope="col">Nome</th>
-                      <th>Ações</th>
+                      <th scope="col" class="text-center">Valor</th>
+                      <th scope="col" class="text-center">Data de Cadastro</th>
+                      <th scope="col" class="text-center">Ações</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr *ngFor="let p of produtos">
                       <td>{{ p.id }}</td>
                       <td>{{ p.nome }}</td>
-                      <td>
-                        <button class="btn btn-xs btn-success"
+                      <td class="text-center">{{p.valor | currency: 'BRL'}}</td>
+                      <td class="text-center">{{p.dataCadastro | date: 'dd/MM/yyyy'}}</td>
+                      <td class="text-center">
+                        <button class="btn btn-xs btn-secondary mr-12"
                                 (click)="editar(p.id)">Editar
                         </button>
+                        &nbsp;
+                        <button class="btn btn-xs btn-danger"
+                                (click)="excluir(p.id)">Excluir
+                        </button>
                       </td>
+
                     </tr>
                   </tbody>
                 </table>
