--- a/src/app/produtos/produto-detalhe/produto-detalhe.component.html
+++ b/src/app/produtos/produto-detalhe/produto-detalhe.component.html
@@ -1,10 +1,12 @@
 <div class="container">
     <h1 class="mt-4">Cadastro de Produto</h1>
-    <form>
+    <form class="was-validated" #ngForm="ngForm">
         <div class="row">
             <div class="form-group col-md-6">
                 <label for="nome">Nome</label>
-                <input class="form-control" name="nome" [(ngModel)]="produto.nome">
+                <input class="form-control" minlength="3" name="nome" [(ngModel)]="produto.nome" required>
+                <div class="valid-feedback">Ok.</div>
+                <div class="invalid-feedback">Informe um nome com no mínimo 3 caracteres</div>
             </div>
             <div class="form-group col-md-6">
                 <label for="nomeFabricante">Fabricante</label>
@@ -12,17 +14,25 @@
                         [ngModelOptions]="{standalone: true}"
                         aria-label="Selecione um fabricante"
                         [compareWith]="compareById"
-                        [(ngModel)]="produto.fabricanteDoProduto">
+                        [(ngModel)]="produto.fabricanteDoProduto" required>
                     <option *ngFor="let fabricante of fabricantes"
                             [ngValue]="fabricante">{{fabricante.nome}}</option>
                 </select>
             </div>
         </div>
         <div class="row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-3">
                 <label for="nome">Peso (Kg)</label>
                 <input class="form-control" type="number" name="peso"
-                       [(ngModel)]="produto.peso">
+                      min="0.1" step="0.1" [(ngModel)]="produto.peso" required>
+                <div class="valid-feedback">Ok.</div>
+                <div class="invalid-feedback">Campo obrigatório (valor maior que zero)</div>
+            </div>
+
+              <div class="form-group col-md-3">
+                <label for="dataCadastro">Data de Cadastro</label>
+                <input class="form-control" type="date" name="dataCadastro"
+                [(ngModel)]="produto.dataCadastro" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="valor">Valor</label>
@@ -32,20 +42,14 @@
                     </div>
                     <input type="number" class="form-control" name="valor"
                            placeholder="Valor de venda do produto"
-                           [(ngModel)]="produto.valor">
+                           [(ngModel)]="produto.valor" required>
                 </div>
             </div>
         </div>
-        <div class="row">
-          <div class="form-group col-md-6">
-            <label for="dataCadastro">Data de Cadastro</label>
-            <input class="form-control" type="date" name="dataCadastro"
-            [(ngModel)]="produto.dataCadastro">
-          </div>
-        </div>
+
         <div class="row mt-4">
             <div class="form-group col-md-6">
-                <button type="submit" class="btn btn-danger" (click)="salvar()">Salvar</button>
+                <button type="submit" class="btn btn-danger" (click)="salvar(ngForm)">Salvar</button>
             </div>
             <div class="form-group col-md-6">
                 <button type="submit" class="btn btn-dark" (click)="voltar()">Voltar</button>
